fix missing margin-top on PoostList

--- a/assets/scss/components/_components.post-list.scss
+++ b/assets/scss/components/_components.post-list.scss
@@ -2,6 +2,10 @@
     #COMPONENTS: POSTLIST
 \*------------------------------------*/
 
+.PostList {
+	margin-top: 2rem;
+}
+
 .PostList-item {
  position: relative;
 }
